# libaave

./: .gitignore
demo-qt/: Makefile  README  README~  audio-alsa.cpp  audio-alsa.cpp~  audio-multimedia.cpp  audio-multimedia.cpp~  audio.h  audio.h~  demo.pro  demo.pro~  geometry.cpp  geometry.cpp~  geometry.h  geometry.h~  imu.cpp  imu.cpp~  imu.h  imu.h~  main.cpp  main.cpp~  model.obj~  view.cpp  view.cpp~  view.h  view.h~
demo-qt/isense/: isense.h  isense.h~  types.h
demo-qt5/: README  demo.pro  geometry.cpp  geometry.h  imu.h  isports.ini  main.cpp  view.cpp
demo-qvtk/demo/: CMakeLists.txt~  README.txt  README.txt~  audio-alsa.cxx  audio-alsa.cxx~  audio.h  audio.h~  demo.cxx  demo.cxx~  demo.h  demo.h~  demo_driver.cxx  demo_driver.cxx~  global.h  global.h~  imu.cxx  imu.cxx~  imu.h  imu.h~
demo-qvtk/geometry/: church.obj~
demo-qvtk/sounds/: piano.raw
demo_qvtk/Demo/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Demo.pro  Demo1QT.ui  README.txt  README.txt~  audio-alsa.cxx  cmake_install.cmake  demo.cxx  demo.h  demo_driver.cxx  global.h  imu.cxx  imu.h  is903277.cal  isenseC1.cfg  moc_demo.cxx  ui_Demo1QT.h  ui_demo.h
demo_qvtk/Geometry/: shoebox.obj~  shoebox4.obj~
libaave/: Makefile  aave.h  aave.h~  audio.c  audio.c~  compute_reverb_params.c~  dft.h  dft.h~  dftindex.c  dftindex.c~  geometry.c  hrtf_cipic.c  hrtf_cipic_set_008.c  hrtf_id.c  hrtf_listen.c  hrtf_mit.c  hrtf_mit.c~  hrtf_mit_set.c  hrtf_tub.c  idft.h  init.c  init.c~  material.c  obj.c  reverb.c  reverb_dattorro.c  reverb_dattorro.c~  reverb_jot.c  reverb_jot.c~
(+513 files in other folders)
